...
        containerView.addShadow(cornerRadius: 25 ,offset: CGSize(width: 5, height: 2), color: color, radius: 1, opacity: 1)
    }
    
    func setupButton(){
        containerView.addSubview(closeButton)
        closeButton.translatesAutoresizingMaskIntoConstraints = false
        closeButton.setTitle("Hide", for: .normal)
        closeButton.setTitleColor(.black, for: .normal)
        closeButton.layer.cornerRadius = 20
        closeButton.layer.borderWidth = 2
        closeButton.layer.borderColor = UIColor.black.cgColor
        closeButton.addTarget(self, action: #selector(closeWindow), for: .touchUpInside)
    }
...
